--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -23,12 +23,34 @@ code {
     color: white;
     background: black;
   }
+  code {
+    background-color: grey;
+  }
+  pre {
+    filter: brightness(0.95);
+  }
+  a {
+    filter: brightness(1.2);
+  }
 }
 
-@media screen and (max-width: 500px) {
-  body {
-    margin-top: 2em;
-  }
+h1 {
+  font-size: 2em;
+  color: var(---heading-color);
+}
+
+h2 {
+  font-size: 1.5em;
+}
+
+h2,
+h3 {
+  color: var(---heading-color);
+  filter: brightness(0.8);
+}
+
+a:hover {
+  text-decoration: underline;
 }
 
 @import url(./blog.css);
